--- a/css/styles.css
+++ b/css/styles.css
@@ -397,3 +397,48 @@ body{
   height: auto;
   object-fit: cover;
 }
+.accordion{
+  border-radius: 2px;
+  margin: 5px 0;
+}
+.accordion-title{
+  background: #eee;
+  transition: all .35s;
+  padding: 10px;
+  position: relative;
+}
+.accordion-title::before{
+  content: ' ';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 75px;
+  height: 100%;
+  width: 1px;
+  background-color: #fff;
+}
+.accordion-title::after{
+  content: ' ';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  bottom: 0;
+  right: 30px;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  border: 1px solid #cacaca;
+}
+.accordion.open .accordion-title::after{
+  background-color: #00a72a;
+}
+.accordion-content{
+  max-height: 0;
+  position: relative;
+  transition: all .35s;
+  overflow: hidden;
+}
+.accordion.open .accordion-content{
+  max-height:1000px;
+  padding: 15px 10px;
+}
