--- a/css/styles.css
+++ b/css/styles.css
@@ -403,8 +403,13 @@ body{
   flex-flow: column nowrap;
   justify-content: space-around;
   margin-right: 10px;
+  text-align: center;
 }
 
+.tool-list.vertical i{
+  margin-bottom: 10px;
+  margin-left: 0;
+}
 .tool-list i{
   margin-left: 5px;
 }
