--- a/css/styles.css
+++ b/css/styles.css
@@ -340,7 +340,40 @@ body{
   margin: 0;
   cursor: pointer;
 }
+.form-item input[type="checkbox"]{
+  -webkit-appearance: none;
+  border: 1px solid #777;
+  width: 17px;
+  height: 17px;
+  position: relative;
+  top: -2px;
+  border-radius: 50%;
+  transition: all .35s;
+}
+.form-item input[type="checkbox"]:checked{
+  border: 1px solid #00a72a;
+}
+.form-item input[type="checkbox"]:focus{
+   outline: none;
+}
+.form-item input[type="checkbox"]::before{
+  content: ' ';
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  background: #00a72a;
+  opacity: 0;
+  top: 7px;
+  left: 7px;
+  transition: transform .35s, opacity .5s;
+  transform-origin: center center;
+  border-radius: 50%;
+}
 
+.form-item input[type="checkbox"]:checked::before{
+  opacity: 1;
+  transform: scale(12);
+}
 .form-item input[type="color"]:focus,
 .form-item input[type="color"]:hover{
     box-shadow: 0 12px 20px -10px rgba(76,175,80,.28), 0 4px 20px 0 rgba(0,0,0,.12), 0 7px 8px -5px rgba(76,175,80,.2);
