--- a/css/styles.css
+++ b/css/styles.css
@@ -272,14 +272,16 @@ body{
 .form-item input[type="text"]:focus ~ label,
 .form-item input[type="text"]:valid ~ label,
 .form-item textarea:focus ~ label,
-.form-item textarea:valid ~ label{
+.form-item textarea:valid ~ label,
+.form-item .contentEditable:focus ~ label,
+.form-item .contentEditable:valid ~ label{
 	top:-12px;
 	font-size:12px;
 }
 .form-item input[type="text"]:focus,
 .form-item input[type="number"]:focus,
-.form-item textarea:focus
-{
+.form-item textarea:focus,
+.form-item .contentEditable:focus ~ label{
  border:none;
  outline:none;
  border-bottom:1px solid #00a72a;
@@ -299,13 +301,18 @@ body{
   color: #aaa;
 }
 .form-item input[type="text"],
-.form-item textarea{
+.form-item textarea,
+.form-item .contentEditable{
   border:0;
   border-bottom:1px solid #d2d2d2;
   background:transparent;
   width:100%;
   padding:8px 0 5px 0;
   resize: vertical;
+  font-size: 13px;
+}
+.form-item .contentEditable{
+  margin-bottom: 0;
 }
 .form-item input[type="number"]{
 	outline: none;
