--- a/css/styles.css
+++ b/css/styles.css
@@ -222,8 +222,9 @@ body{
 }
 .card{
   background: #fff;
-  box-shadow: 0 1px 4px 0 rgba(0,0,0,.14);
   border-radius: 6px;
+  box-shadow: 0px 0px 14px 3px rgb(197, 197, 197);
+  /* box-shadow: 0 1px 4px 0 rgba(0,0,0,.14); */
   padding: 15px;
   margin: 5px;
   position: relative;
