--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,7 @@ body{
   background: #fff;
   border-radius: 6px;
   /* box-shadow: 0px 0px 14px 3px rgb(197, 197, 197); */
-  box-shadow: 0 1px 4px 0 rgba(0,0,0,.14);
+  box-shadow: 0 1px 4px 1px rgba(0,0,0,.14);
   padding: 15px;
   margin: 5px;
   position: relative;
