New checkbox switch style

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,36 +250,44 @@ body{
 .row.middle{
   align-items: center;
 }
+.row{
+  flex-flow: row nowrap;
+}
 .col{
-  flex-basis: 100%;
+  flex-grow: 1;
+}
+.col.col-2{
+  flex-grow: 2;
+}
+.col.col-3{
+  flex-grow: 3;
+}
+.col.col-left{
+  border-left: 1px solid #ccc;
+  padding-left: 10px;
+}
+.col.col-right{
+  border-right: 1px solid #ccc;
+  padding-right: 10px;
 }
 @media(min-width: 820px){
+  .col:not(:first-of-type){
+    margin-left: 5px;
+  }
+  .col:not(:last-of-type){
+    margin-right: 5px;
+  }
+}
+@media(max-width: 820px){
   .row{
-    flex-flow: row wrap;
+      flex-flow: row wrap;
   }
   .col{
-    flex-basis: 50%;
+    flex-basis: 100%;
   }
-  .col.grow{
-    flex: 1;
-  }
-  .col.grow ~ .col{
-    flex: 0;
-  }
-  .col.left{
-    border-left: 1px solid #ccc;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-left: 10px;
-  }
-  .col.right{
-    border-right: 1px solid #ccc;
-    padding-right: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-right: 10px;
-  }
+}
+.col-title{
+  text-align: center;
 }
 #preview{
   display: flex;
@@ -304,6 +312,14 @@ body{
 .preview-header > *{
   font-weight:normal;
   color: #fff;
+}
+.form-item input[type="text"],
+.form-item input[type="number"],
+.form-item input[type="search"],
+.form-item input[type="color"],
+.form-item textarea,
+.form-item .contentEditable{
+  min-width: 150px;
 }
 .form-item input[type="text"]:focus ~ label,
 .form-item input[type="text"]:valid ~ label,
@@ -342,7 +358,6 @@ body{
 .form-item input[type="number"]{
   text-align: right;
 	position:relative;
-  top: -6px;
 	cursor: pointer;
 }
 input::-webkit-inner-spin-button {
@@ -364,7 +379,9 @@ input::-webkit-inner-spin-button {
   font-size: 13px;
 }
 .form-item select{
-  text-align-last: center;
+  text-align-last: right;
+  top: -2px;
+  position: relative;
 }
 .form-item select ~ label{
   top: 8px;
@@ -377,10 +394,12 @@ input::-webkit-inner-spin-button {
 }
 .form-item > div ~ input[type="number"]{
   text-align: center;
+  top: -6px;
   border: 0;
   margin:0 10px;
   width: 40px;
   border-bottom:1px solid #d2d2d2;
+  min-width: 0;
 }
 .form-item input[type="button"]{
   color:#fff;
@@ -421,13 +440,14 @@ input[type="color"].postColorSelector:focus{
 .form-item input[type="checkbox"]{
   -webkit-appearance: none;
   border: 1px solid #777;
-  width: 17px;
-  height: 17px;
+  width: 30px;
+  height: 18px;
   position: relative;
   top: -2px;
-  border-radius: 50%;
+  border-radius: 34px;
   transition: all .35s;
 }
+
 .form-item input[type="checkbox"]:checked{
   border: 1px solid #00a72a;
 }
@@ -437,21 +457,38 @@ input[type="color"].postColorSelector:focus{
 .form-item input[type="checkbox"]::before{
   content: ' ';
   position: absolute;
-  width: 1px;
-  height: 1px;
-  background: #00a72a;
-  opacity: 0;
-  top: 7px;
-  left: 7px;
+  width: 12px;
+  height: 12px;
+  opacity: 1;
+  transform: translateX(12px);
+  background: #aaa;
+  top: 2px;
+  left: 2px;
   transition: transform .35s, opacity .5s;
   transform-origin: center center;
   border-radius: 50%;
 }
-
 .form-item input[type="checkbox"]:checked::before{
-  opacity: 1;
-  transform: scale(12);
+  background: #00a72a;
+  transform: translateX(0);
 }
+
+.form-item input[type="checkbox"].checkbox-right{
+  left: calc(100% - 30px);
+}
+.form-item.border{
+  border-bottom: 1px solid #d2d2d2;
+  padding-bottom: 5px;
+}
+.form-item input[type="checkbox"].checkbox-right::before{
+    left: calc(100% - 26px);
+}
+
+.form-item input[type="checkbox"].checkbox-right ~ label{
+  left: 0;
+  top: 1px;
+}
+
 .form-item input[type="color"]:focus,
 .form-item input[type="color"]:hover{
     box-shadow: 0 12px 20px -10px rgba(76,175,80,.28), 0 4px 20px 0 rgba(0,0,0,.12), 0 7px 8px -5px rgba(76,175,80,.2);
@@ -464,7 +501,7 @@ input[type="color"].postColorSelector:focus{
   cursor: pointer;
 }
 .form-item input[type="checkbox"] ~ label{
-  left: 25px;
+  left: 40px;
   top: 1px;
 }
 .form-item input[type="checkbox"]:hover,
@@ -485,6 +522,14 @@ input[type="color"].postColorSelector:focus{
   flex-flow: row nowrap;
   position: relative;
 }
+@media(max-width: 820px){
+  .form-item.split{
+    flex-flow: row wrap;
+  }
+  .form-item > div:not(:last-of-type){
+    margin-bottom: 15px;
+  }
+}
 .form-item.split > *:first-child{
   flex-grow: 1;
   position: relative;
@@ -493,11 +538,13 @@ input[type="color"].postColorSelector:focus{
   flex-grow: 1;
   position: relative;
 }
-.form-item.split.even > *:not(:first-of-type){
-  margin-left: 5px;
-}
-.form-item.split.even > *:first-of-type{
-  margin-right: 5px;
+@media(min-width: 820px){
+  .form-item.split.even > *:not(:first-of-type){
+    margin-left: 5px;
+  }
+  .form-item.split.even > *:first-of-type{
+    margin-right: 5px;
+  }
 }
 .newsletter-list{
   list-style:none;
